RESOLVED FIXED205392
Invalidate only affected elements after media query evaluation changes
https://bugs.webkit.org/show_bug.cgi?id=205392
Summary Invalidate only affected elements after media query evaluation changes
Antti Koivisto
Reported 2019-12-18 06:36:41 PST
We are currently invalidating the whole tree. Invalidate only the affected parts of the DOM using invalidation rule sets.
Attachments
patch (11.44 KB, patch)
2019-12-18 12:22 PST, Antti Koivisto
no flags
patch (11.81 KB, patch)
2019-12-18 12:57 PST, Antti Koivisto
no flags
patch (13.01 KB, patch)
2019-12-18 22:59 PST, Antti Koivisto
no flags
patch (13.11 KB, patch)
2019-12-19 00:37 PST, Antti Koivisto
no flags
patch (15.97 KB, patch)
2019-12-20 02:07 PST, Antti Koivisto
no flags
patch (15.97 KB, patch)
2019-12-20 02:20 PST, Antti Koivisto
no flags
patch (15.53 KB, patch)
2019-12-20 02:21 PST, Antti Koivisto
no flags
patch (15.53 KB, patch)
2019-12-20 02:25 PST, Antti Koivisto
no flags
patch (14.55 KB, patch)
2019-12-20 03:18 PST, Antti Koivisto
zalan: review+
gcc build test (17.08 KB, patch)
2019-12-20 03:50 PST, Antti Koivisto
no flags
gcc build test (15.40 KB, patch)
2019-12-20 03:58 PST, Antti Koivisto
no flags
gcc build test (18.34 KB, patch)
2019-12-20 04:45 PST, Antti Koivisto
no flags
gcc build test (14.85 KB, patch)
2019-12-20 04:59 PST, Antti Koivisto
no flags
gcc build test (16.82 KB, patch)
2019-12-20 06:30 PST, Antti Koivisto
no flags
patch (17.24 KB, patch)
2019-12-20 07:06 PST, Antti Koivisto
no flags
patch (14.55 KB, patch)
2019-12-21 09:24 PST, Antti Koivisto
no flags
patch (17.93 KB, patch)
2019-12-22 07:35 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-12-18 12:22:19 PST
Antti Koivisto
Comment 2 2019-12-18 12:57:50 PST
Antti Koivisto
Comment 3 2019-12-18 22:59:09 PST
Antti Koivisto
Comment 4 2019-12-19 00:37:53 PST
Antti Koivisto
Comment 5 2019-12-20 02:07:51 PST
Antti Koivisto
Comment 6 2019-12-20 02:20:05 PST
Antti Koivisto
Comment 7 2019-12-20 02:21:31 PST
Antti Koivisto
Comment 8 2019-12-20 02:25:16 PST
Antti Koivisto
Comment 9 2019-12-20 03:18:04 PST
Antti Koivisto
Comment 10 2019-12-20 03:50:15 PST
Created attachment 386198 [details] gcc build test
Antti Koivisto
Comment 11 2019-12-20 03:58:04 PST
Created attachment 386199 [details] gcc build test
Antti Koivisto
Comment 12 2019-12-20 04:45:54 PST
Created attachment 386203 [details] gcc build test
Antti Koivisto
Comment 13 2019-12-20 04:59:51 PST
Created attachment 386204 [details] gcc build test
Antti Koivisto
Comment 14 2019-12-20 06:30:08 PST
Created attachment 386212 [details] gcc build test
Antti Koivisto
Comment 15 2019-12-20 07:06:59 PST
WebKit Commit Bot
Comment 16 2019-12-20 08:34:08 PST
Comment on attachment 386216 [details] patch Clearing flags on attachment: 386216 Committed r253820: <https://trac.webkit.org/changeset/253820>
WebKit Commit Bot
Comment 17 2019-12-20 08:34:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 18 2019-12-20 08:35:18 PST
Truitt Savell
Comment 19 2019-12-20 13:51:54 PST
Reverted r253820 for reason: Broke Mac testing Committed r253844: <https://trac.webkit.org/changeset/253844>
Antti Koivisto
Comment 20 2019-12-21 04:29:44 PST
The HashTrait change exposed a bug in the content extension code. I'll do that change separately in bug 205540.
Antti Koivisto
Comment 21 2019-12-21 09:24:44 PST
Antti Koivisto
Comment 22 2019-12-22 07:35:57 PST
WebKit Commit Bot
Comment 23 2019-12-22 10:07:03 PST
Comment on attachment 386315 [details] patch Clearing flags on attachment: 386315 Committed r253875: <https://trac.webkit.org/changeset/253875>
WebKit Commit Bot
Comment 24 2019-12-22 10:07:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.