Source/WebCore/style/RuleSet.cpp
@@ -95,7 +95,7 @@ void RuleSet::addRule(StyleRule& rule, unsigned selectorIndex, unsigned selector
     m_features.collectFeatures(ruleData);
 
     if (mediaQueryCollector)
-        mediaQueryCollector->addRulePositionIfNeeded(ruleData.position());
+        mediaQueryCollector->addRuleIfNeeded(ruleData);
 
     unsigned classBucketSize = 0;
     const CSSSelector* idSelector = nullptr;
@@ -405,9 +405,12 @@ void RuleSet::traverseRuleDatas(Function&& function)
     traverseVector(m_universalRules);
 }
 
-RuleSet::MediaQueryStyleUpdateType RuleSet::evaluteDynamicMediaQueryRules(const MediaQueryEvaluator& evaluator)
+Optional<DynamicMediaQueryEvaluationChanges> RuleSet::evaluteDynamicMediaQueryRules(const MediaQueryEvaluator& evaluator)
 {
-    bool changes = false;
+    Vector<size_t> changedQueryIndexes;
+    Vector<const Vector<RuleFeature>*> ruleFeatures;
+
+    size_t mediaQueryIndex = 0;
     for (auto& dynamicRules : m_dynamicMediaQueryRules) {
         bool result = true;
         for (auto& set : dynamicRules.mediaQuerySets) {
@@ -420,18 +423,34 @@ RuleSet::MediaQueryStyleUpdateType RuleSet::evaluteDynamicMediaQueryRules(const 
         if (result != dynamicRules.result) {
             dynamicRules.result = result;
             if (dynamicRules.requiresFullReset)
-                return MediaQueryStyleUpdateType::Reset;
+                return { { DynamicMediaQueryEvaluationChanges::Type::ResetStyle } };
 
             traverseRuleDatas([&](RuleData& ruleData) {
                 if (!dynamicRules.affectedRulePositions.contains(ruleData.position()))
                     return;
                 ruleData.setEnabled(result);
-                changes = true;
             });
+
+            changedQueryIndexes.append(mediaQueryIndex);
+            ruleFeatures.append(&dynamicRules.ruleFeatures);
         }
+
+        ++mediaQueryIndex;
     }
 
-    return changes ? MediaQueryStyleUpdateType::Resolve : MediaQueryStyleUpdateType::None;
+    if (changedQueryIndexes.isEmpty())
+        return { };
+
+    auto& ruleSet = m_mediaQueryInvalidationRuleSetCache.ensure(changedQueryIndexes, [&] {
+        auto ruleSet = makeUnique<RuleSet>();
+        for (auto* featureVector : ruleFeatures) {
+            for (auto& feature : *featureVector)
+                ruleSet->addRule(*feature.rule, feature.selectorIndex, feature.selectorListIndex);
+        }
+        return ruleSet;
+    }).iterator->value;
+
+    return { { DynamicMediaQueryEvaluationChanges::Type::InvalidateStyle, { ruleSet.get() } } };
 }
 
 bool RuleSet::hasShadowPseudoElementRules() const
@@ -472,7 +491,7 @@ void RuleSet::shrinkToFit()
 
 RuleSet::MediaQueryCollector::~MediaQueryCollector() = default;
 
-bool RuleSet::MediaQueryCollector::pushAndEvaluate(MediaQuerySet* set)
+bool RuleSet::MediaQueryCollector::pushAndEvaluate(const MediaQuerySet* set)
 {
     if (!set)
         return true;
@@ -495,7 +514,7 @@ bool RuleSet::MediaQueryCollector::pushAndEvaluate(MediaQuerySet* set)
     return true;
 }
 
-void RuleSet::MediaQueryCollector::pop(MediaQuerySet* set)
+void RuleSet::MediaQueryCollector::pop(const MediaQuerySet* set)
 {
     if (!set || dynamicContextStack.isEmpty() || set != &dynamicContextStack.last().set.get())
         return;
@@ -508,6 +527,9 @@ void RuleSet::MediaQueryCollector::pop(MediaQuerySet* set)
         if (collectDynamic) {
             auto& toAdd = dynamicContextStack.last().affectedRulePositions;
             rules.affectedRulePositions.add(toAdd.begin(), toAdd.end());
+
+            rules.ruleFeatures = WTFMove(dynamicContextStack.last().ruleFeatures);
+            rules.ruleFeatures.shrinkToFit();
         } else
             rules.requiresFullReset = true;
 
@@ -524,11 +546,14 @@ void RuleSet::MediaQueryCollector::didMutateResolver()
     didMutateResolverWithinDynamicMediaQuery = true;
 }
 
-void RuleSet::MediaQueryCollector::addRulePositionIfNeeded(size_t index)
+void RuleSet::MediaQueryCollector::addRuleIfNeeded(const RuleData& ruleData)
 {
     if (dynamicContextStack.isEmpty())
         return;
-    dynamicContextStack.last().affectedRulePositions.append(index);
+
+    auto& context = dynamicContextStack.last();
+    context.affectedRulePositions.append(ruleData.position());
+    context.ruleFeatures.append({ ruleData.rule(), ruleData.selectorIndex(), ruleData.selectorListIndex() });
 }
 
 
