Source/WebCore/style/StyleScope.cpp
@@ -651,17 +651,20 @@ void Scope::evaluateMediaQueries(TestFunction&& testFunction)
     if (!resolver)
         return;
 
-    auto updateType = testFunction(*resolver);
-
-    switch (updateType) {
-    case RuleSet::MediaQueryStyleUpdateType::None:
+    auto evaluationChanges = testFunction(*resolver);
+    if (!evaluationChanges)
         return;
-    case RuleSet::MediaQueryStyleUpdateType::Resolve:
-        // FIXME: We could have an invalidation ruleset for rules inside dynamic media queries.
-        if (auto* documentElement = m_document.documentElement())
-            documentElement->invalidateStyleForSubtree();
+
+    switch (evaluationChanges->type) {
+    case DynamicMediaQueryEvaluationChanges::Type::InvalidateStyle: {
+        Invalidator invalidator(evaluationChanges->invalidationRuleSets);
+        if (m_shadowRoot)
+            invalidator.invalidateStyle(*m_shadowRoot);
+        else
+            invalidator.invalidateStyle(m_document);
         break;
-    case RuleSet::MediaQueryStyleUpdateType::Reset:
+    }
+    case DynamicMediaQueryEvaluationChanges::Type::ResetStyle:
         scheduleUpdate(UpdateType::ContentsOrInterpretation);
         break;
     }
